# Haze

./: .gitignore  CMakeLists.txt  Haze.cpp  README.md  五子棋.hz
DirectX12Interface/: DirectX12Interface.sln
DirectX12Interface/DirectX12Interface/: DirectX12Interface.vcxproj  (+1 more)
Haze/: Haze.sln
Haze/Haze/: CMakeLists.txt  Haze.vcxproj  Haze.vcxproj.filters
Haze/Haze/AST/Header/: ASTBase.h  ASTClass.h  ASTEnum.h  ASTFunction.h  ASTLibrary.h  ASTStandardLibrary.h  ASTTemplateBase.h  ASTTemplateClass.h
Haze/Haze/AST/Source/: ASTBase.cpp  ASTClass.cpp  ASTEnum.cpp  ASTFunction.cpp  ASTLibrary.cpp  ASTStandardLibrary.cpp  ASTTemplateBase.cpp  ASTTemplateClass.cpp
Haze/Haze/Backend/Header/: BackendParse.h  ModuleUnit.h  Optimizer.h  OptimizerDefine.h
Haze/Haze/Backend/Source/: BackendParse.cpp  ModuleUnit.cpp  Optimizer.cpp
Haze/Haze/BaseContainer/Header/: HazeString.h
Haze/Haze/BaseContainer/Source/: HazeString.cpp
Haze/Haze/Code/: HazeCode.hz
Haze/Haze/Compiler/Header/: Compiler.h  CompilerArrayValue.h  CompilerBlock.h  CompilerClass.h  CompilerClassValue.h  CompilerClosureFunction.h  CompilerClosureValue.h  CompilerElementValue.h  CompilerEnum.h  CompilerEnumValue.h  CompilerFunction.h  CompilerHashValue.h  CompilerHelper.h  CompilerModule.h  CompilerObjectBaseValue.h  CompilerPointerFunction.h  CompilerRefValue.h  CompilerStringValue.h  CompilerSymbol.h  CompilerValue.h  HazeBaseBlock.h  HazeCompiler.h  HazeCompilerArrayValue.h  HazeCompilerClass.h  HazeCompilerClassValue.h  HazeCompilerEnum.h  HazeCompilerEnumValue.h  HazeCompilerFunction.h  HazeCompilerFunctionStack.h  HazeCompilerHelper.h  HazeCompilerInitListValue.cpp  HazeCompilerInitListValue.h  HazeCompilerModule.h  HazeCompilerPointerArray.h  HazeCompilerPointerFunction.h  HazeCompilerPointerPointerValue.h  HazeCompilerPointerValue.h  HazeCompilerRefValue.h  HazeCompilerStringValue.h  HazeCompilerTemplateClass.h  (+3 more)
Haze/Haze/Compiler/Source/: Compiler.cpp  CompilerArrayValue.cpp  CompilerBlock.cpp  CompilerClass.cpp  CompilerClassValue.cpp  CompilerClosureFunction.cpp  CompilerClosureValue.cpp  CompilerElementValue.cpp  CompilerEnum.cpp  CompilerEnumValue.cpp  CompilerFunction.cpp  CompilerHashValue.cpp  CompilerHelper.cpp  CompilerModule.cpp  CompilerObjectBaseValue.cpp  CompilerPointerFunction.cpp  CompilerRefValue.cpp  CompilerStringValue.cpp  CompilerSymbol.cpp  CompilerValue.cpp  HazeBaseBlock.cpp  HazeCompiler.cpp  HazeCompilerArrayValue.cpp  HazeCompilerClass.cpp  HazeCompilerClassValue.cpp  HazeCompilerEnum.cpp  HazeCompilerEnumValue.cpp  HazeCompilerFunction.cpp  HazeCompilerFunctionStack.cpp  HazeCompilerHelper.cpp  HazeCompilerInitListValue.cpp  HazeCompilerModule.cpp  HazeCompilerPointerArray.cpp  HazeCompilerPointerFunction.cpp  HazeCompilerPointerPointerValue.cpp  HazeCompilerPointerValue.cpp  HazeCompilerRefValue.cpp  HazeCompilerStringValue.cpp  HazeCompilerTemplateClass.cpp  HazeCompilerTemplateFunction.cpp  (+1 more)
Haze/Haze/Debugger/Header/: HazeDebugInfo.h  HazeDebugger.h  HazeDebuggerBuffer.h  HazeDebuggerServer.h  HazeJson.h
Haze/Haze/Debugger/Source/: HazeDebugger.cpp  HazeDebuggerBuffer.cpp  HazeDebuggerServer.cpp  HazeJson.cpp
Haze/Haze/Define/Header/: HazeBaseLibraryDefine.h  HazeCompare.h  HazeCompilerVersion.h  HazeDebug.h  HazeDebugDefine.h  HazeDefine.h  HazeExecuteFile.h  HazeFile.h  HazeInstruction.h  HazeLibraryType.h  HazeLogDefine.h  HazeOpCodeTemplate  HazeStrcut.h  HazeTemplate.inl  HazeToDoList  HazeToken.h  HazeTokenText.h  HazeTypeInfo.h  HazeUtility.h  HazeValue.h  HazeValueTypeTemplate
Haze/Haze/Define/Source/: HazeCompare.cpp  HazeExecuteFile.cpp  HazeInstruction.cpp  HazeTypeInfo.cpp  HazeUtility.cpp  HazeValue.cpp
Haze/Haze/HazeASS/: HazeCode.Hza
Haze/Haze/HazeICode/: HazeCode.Hzic  标准流.Hzic  测试.Hzic
Haze/Haze/HazeLog/Header/: HazeLog.h
Haze/Haze/HazeLog/Source/: HazeLog.cpp
Haze/Haze/HazeOpCode/: Main.Hzb
Haze/Haze/Header/: Haze.h  HazeFilePathHelper.h  HazeHeader.h  HazeInstruction.h  HazeLog.h  HazePch.h  HazeStack.h  HazeVM.h  JwHeader.h  Parse.h
Haze/Haze/JIT/Header/: HazeJIT.h  HazeProfiler.h
Haze/Haze/JIT/Source/: HazeJIT.cpp
Haze/Haze/Memory/Header/: GCObjectList.h  GarbageCollection.h  HazeMemory.h  MemoryBlock.h  MemoryBucket.h  MemoryDefine.h  MemoryFreeList.h  MemoryHelper.h  MemoryPage.h  MemoryPool.h
Haze/Haze/Memory/Source/: GCObjectList.cpp  GarbageCollection.cpp  HazeMemory.cpp  MemoryBlock.cpp  MemoryBucket.cpp  MemoryFreeList.cpp  MemoryHelper.cpp  MemoryPage.cpp  MemoryPool.cpp
Haze/Haze/MetaData/Header/: HazeClass.h  HazeFunction.h  HazeModule.h  HazeString.h  HazeVariable.h
Haze/Haze/MetaData/Source/: HazeClass.cpp  HazeFunction.cpp  HazeModule.cpp  HazeVariable.cpp
Haze/Haze/Object/Header/: GCObject.h  ObjectArray.h  ObjectBase.h  ObjectClass.h  ObjectClosure.h  ObjectDefine.h  ObjectDynamicClass.h  ObjectHash.h  ObjectString.h
Haze/Haze/Object/Source/: ObjectArray.cpp  ObjectBase.cpp  ObjectClass.cpp  ObjectClosure.cpp  ObjectDynamicClass.cpp  ObjectHash.cpp  ObjectString.cpp
Haze/Haze/Other/: HazeCode.hz  HazeLib.hz  字符串.hz  标准流.hz
Haze/Haze/Source/: Haze.cpp  HazeFilePathHelper.cpp  HazeInstruction.cpp  HazeLog.cpp  HazePch.cpp  HazeStack.cpp  HazeVM.cpp  Main.cpp  Parse.cpp
Haze/Haze/StandardLibrary/Header/: HazeStandardLibraryBase.h  HazeStream.h
Haze/Haze/StandardLibrary/Source/: HazeStandardLibraryBase.cpp  HazeStream.cpp
Haze/Haze/VM/Header/: HazeLibraryManager.h  HazeStack.h  HazeVM.h  MemoryBucket.h  MemoryPool.h  OpCodeProcessor.h
Haze/Haze/VM/Source/: HazeLibraryManager.cpp  HazeStack.cpp  HazeVM.cpp  MemoryBucket.cpp  MemoryPool.cpp  OpCodeProcessor.cpp
Haze/Haze/XJson/: XJson.cpp  XJson.h
Haze/HazeTestDLL/: CMakeLists.txt  HazeTestDLL.vcxproj  dllmain.cpp
Haze/库/: 标准内存.hz
HazeICode/: HazeCode.Hzic  标准流.Hzic  测试.Hzic
HazeLaunch/: CMakeLists.txt  HazeLaunch.cpp  HazeLaunch.vcxproj  HazeLaunch.vcxproj.filters
HazeOpenGL/: HazeOpenGL.sln
HazeTestProject/: Launch.bat  主文件.hz
HzCode/: HazeCode.hz  开始界面.hz  怪物.hz  点.hz  界面基类.hz  线.hz
库/: 标准内存.hz  标准文件.hz  标准流.hz
朝雾测试项目/: 主文件.hz
(+36 files in other folders)
